objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <description>Represents a product or service line item associated with a quote/proposal</description>
    <fields>
        <fullName>APTPS_Quantity_Display__c</fullName>
        <formula>Apttus_QPConfig__Quantity2__c</formula>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_AssetNetPrice__c</fullName>
        <formula>Apttus_QPConfig__AssetLineItemId__r.Apttus_Config2__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Templates to display Asset Net Price in 2 decimal Places</inlineHelpText>
        <label>Asset Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Basis__c</fullName>
        <label>Auto Renew Price Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Percentage__c</fullName>
        <label>Auto Renew Price Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Extended_Price_display__c</fullName>
        <formula>IF(Apttus_QPConfig__BaseExtendedPrice__c = 0, Apttus_QPConfig__ExtendedPrice__c, Apttus_QPConfig__BaseExtendedPrice__c)</formula>
        <label>Base Extended Price display</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Freq_Temp_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(APTS_Billing_Frequency_Template__c) ) ,  CASE(APTS_Billing_Frequency_Template__c, &apos;Anniversary-Yearly&apos;, &apos;Anniversaire- Annuel&apos;, &apos;Anniversary-Monthly&apos;, &apos;Anniversaire- Mensuel&apos;,&apos;Yearly&apos;,&apos;Annuel&apos;,&apos;Monthly&apos;,&apos;Mensuel&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>APTS Billing Freq Temp French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Frequency_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK( TEXT(Apttus_QPConfig__BillingFrequency__c)) ) ,  CASE(TEXT(Apttus_QPConfig__BillingFrequency__c), &apos;Monthly&apos;, &apos;Mensuel&apos;, &apos;Yearly&apos;, &apos;Annuel&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>APTS Billing Frequency French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Frequency_Template__c</fullName>
        <formula>IF(APTS_Item_Category_Group__c == &quot;ZPMT&quot; || APTS_Item_Category_Group__c == &quot;ZPAL&quot; || 
APTS_Item_Category_Group__c == &quot;ZPAV&quot; || APTS_Item_Category_Group__c == &quot;ZBAR&quot;,

CASE( Apttus_QPConfig__BillingFrequency__c ,
 &quot;Yearly&quot; , &quot;Anniversary-Yearly&quot; ,
 &quot;Monthly&quot; , &quot;Anniversary-Monthly&quot; ,
 null) ,

CASE( Apttus_QPConfig__BillingFrequency__c ,
 &quot;Yearly&quot; , &quot;Yearly&quot; ,
 &quot;Monthly&quot; , &quot;Monthly&quot; ,
 &quot;Hourly&quot; ,&quot;Hourly&quot; ,
 &quot;Daily&quot; , &quot;Daily&quot; ,
 &quot;Quarterly&quot; , &quot;Quarterly&quot; , 
 &quot;Half Yearly&quot; , &quot;Half Yearly&quot; ,
 &quot;One Time&quot; , &quot;One Time&quot; ,
 null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS Billing Frequency Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Frequency__c</fullName>
        <formula>CASE(IF(Contract_Subscription_Type_Text__c == &apos;Ship &amp; Enter Subscription&apos; &amp;&amp; ISPICKVAL(Apttus_QPConfig__BillingFrequency__c, &apos;Monthly&apos;), &apos;MONTHLY&apos;, &apos;&apos;), &apos;MONTHLY&apos;,&apos;MONTHLY&apos;,&apos;&apos;) +

CASE(IF(Contract_Subscription_Type_Text__c == &apos;Ship &amp; Enter Subscription&apos; &amp;&amp; ISPICKVAL(Apttus_QPConfig__BillingFrequency__c, &apos;Yearly&apos;), &apos;ANNUAL&apos;, &apos;&apos;), &apos;ANNUAL&apos;,&apos;ANNUAL&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Type__c</fullName>
        <formula>IF( OR(APTS_Proposal_Business_Unit__c  = &apos;Corp OneOTC US&apos;,APTS_Proposal_Business_Unit__c  = &apos;Corp OneOTC UK&apos;), IF( APTS_WLEC_Product_Category__c  = &apos;PS&apos;,IF( APTS_Item_Category_Group__c = &apos;ZRRB&apos;, &apos;Time and Material&apos;, &apos;Fixed Fee&apos;) , &apos;&apos;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Charges__c</fullName>
        <formula>IF(AND(!ISNULL(APTS_New_Bridge_Discount__c),OR(APTS_Proposal_Business_Unit__c = &apos;Argentina-LLEY&apos;,APTS_Proposal_Business_Unit__c = &apos;Brazil-TSL&apos;,APTS_Proposal_Business_Unit__c = &apos;Hong Kong-SMHK&apos;,APTS_Proposal_Business_Unit__c = &apos;India-INWL&apos;,APTS_Proposal_Business_Unit__c = &apos;Australia-PNG-LRA&apos;,APTS_Proposal_Business_Unit__c = &apos;NZ-Fiji-BKRS&apos;,APTS_Proposal_Business_Unit__c = &apos;FACT-TRFR&apos;,APTS_Proposal_Business_Unit__c = &apos;Russia-1S&apos;,APTS_Proposal_Business_Unit__c = &apos;SouthKorea-DUZON&apos;,APTS_Proposal_Business_Unit__c = &apos;SMGE&apos;,APTS_Proposal_Business_Unit__c = &apos;Dofiscal&apos;)),
IF(TEXT(Apttus_QPConfig__AdjustmentType__c) == &apos;Price Override&apos;, ( Apttus_QPConfig__NetPrice__c/12) - ( (Apttus_QPConfig__NetPrice__c/12) * APTS_Bridge_Discount_Number__c/100), IF( TEXT(Apttus_QPConfig__PriceMethod__c)==&quot;Per Unit&quot;,((Apttus_QPConfig__ListPrice__c*Apttus_QPConfig__Quantity2__c) / 12) - (((Apttus_QPConfig__ListPrice__c*Apttus_QPConfig__Quantity2__c) / 12) * ( APTS_Bridge_Discount_Number__c /100)),((Apttus_QPConfig__ListPrice__c / 12) - ((Apttus_QPConfig__ListPrice__c / 12) * ( APTS_Bridge_Discount_Number__c /100))))) ,
IF( AND( APTS_Proposal_Business_Unit__c = &apos;Canada&apos;, TEXT(Apttus_QPConfig__BillingFrequency__c) = &apos;Yearly&apos;) ,(Apttus_QPConfig__ListPrice__c / 12) - ((Apttus_QPConfig__ListPrice__c / 12) * ( APTS_Bridge_Discount_Number__c /100)), IF( AND(!ISNULL(APTS_New_Bridge_Discount__c),TEXT(Apttus_QPConfig__PriceMethod__c)==&quot;Per Unit&quot;), ( Apttus_QPConfig__ListPrice__c*Apttus_QPConfig__Quantity2__c) - ( Apttus_QPConfig__ListPrice__c * Apttus_QPConfig__Quantity2__c * APTS_Bridge_Discount_Number__c/100),
IF(AND(!ISNULL(APTS_New_Bridge_Discount__c),TEXT(Apttus_QPConfig__PriceMethod__c)&lt;&gt; &quot;Per Unit&quot;),( Apttus_QPConfig__ListPrice__c) - ( Apttus_QPConfig__ListPrice__c * APTS_Bridge_Discount_Number__c/100),
IF(ISNULL(APTS_New_Bridge_Discount__c),null,0)))))</formula>
        <label>Bridge Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Discount_Number__c</fullName>
        <formula>VALUE(TEXT(APTS_New_Bridge_Discount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bridge Discount Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Discount__c</fullName>
        <label>Bridge Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Eligibility__c</fullName>
        <label>Bridge Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK( TEXT(APTS_Bridge__c) ) ) ,  CASE(TEXT(APTS_Bridge__c), &apos;1 Month&apos;, &apos;1 mois&apos;, &apos;2 Months&apos;,&apos;2 mois&apos;, &apos;3 Months&apos;,&apos;3 mois&apos;,&apos;4 Months&apos;,&apos;4 mois&apos;,&apos;5 Months&apos;,&apos;5 mois&apos;,&apos;6 Months&apos;,&apos;6 mois&apos;,&apos;7 Months&apos;,&apos;7 mois&apos;,&apos;8 Months&apos;,&apos;8 mois&apos;,&apos;9 Months&apos;,&apos;9 mois&apos;,&apos;10 Months&apos;,&apos;10 mois&apos;,&apos;11 Months&apos;,&apos;11 mois&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>Bridge French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Length__c</fullName>
        <label>Bridge Length</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Monthly_Charge__c</fullName>
        <description>Net Price of Proposal Line item less the Bridge discount amount entered</description>
        <label>APTS_Bridge_Monthly_Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge__c</fullName>
        <label>Bridge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/a</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CUAS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CUAS+1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_CUrrency_Symbol__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Currency_Symbol__c</formula>
        <label>CUrrency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Auto_Renewal__c</fullName>
        <label>Calculated Auto Renewal %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Autorenewal_Display__c</fullName>
        <formula>IF(TEXT( APTS_Renewal_Type__c ) = &apos;Evergreen&apos; || TEXT( APTS_Renewal_Type__c ) = &apos;Term Commitment&apos; || TEXT( APTS_Renewal_Type__c ) = &apos;Non-Renewable&apos;, &apos;See Below&apos;,  IF(TEXT( APTS_Renewal_Type__c ) = &apos;Auto Renew&apos;  &amp;&amp; TEXT( APTS_Contract_Term__c )  = &apos;1 Year&apos;, &apos;4%&apos;,  IF(TEXT( APTS_Renewal_Type__c ) = &apos;Auto Renew&apos;  &amp;&amp; (TEXT( APTS_Contract_Term__c )  = &apos;2 Years&apos; || TEXT( APTS_Contract_Term__c )  = &apos;3 Years&apos; || TEXT( APTS_Contract_Term__c )  = &apos;4 Years&apos; || TEXT( APTS_Contract_Term__c )  = &apos;5 Years&apos;) &amp;&amp;  NOT( ISBLANK( APTS_Calculated_Auto_Renewal__c ) ) , TEXT(APTS_Calculated_Auto_Renewal__c)  + &quot;%&quot;,  IF(TEXT( APTS_Renewal_Type__c ) = &apos;Auto Renew&apos;  &amp;&amp; (TEXT( APTS_Contract_Term__c )  = &apos;2 Years&apos; || TEXT( APTS_Contract_Term__c )  = &apos;3 Years&apos; || TEXT( APTS_Contract_Term__c )  = &apos;4 Years&apos; || TEXT( APTS_Contract_Term__c )  = &apos;5 Years&apos;) &amp;&amp; ISBLANK( APTS_Calculated_Auto_Renewal__c ) , &apos;4%&apos;, &apos;&apos;) ) ) )</formula>
        <label>Calculated Autorenewal % Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Min_YOY__c</fullName>
        <label>Calculated Min YOY%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_1__c</fullName>
        <label>Calculated Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_2__c</fullName>
        <label>Calculated Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_3__c</fullName>
        <label>Calculated Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L2__c</fullName>
        <description>DOC 12648 Treph Changes</description>
        <label>Cat Hierarchy L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L3__c</fullName>
        <description>DOC 12648 Treph Analysis</description>
        <label>Cat Hierarchy L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L5__c</fullName>
        <label>Cat Hierarchy L5</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combination_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Detail</label>
        <referenceTo>APTS_Attribute_Value_Combination__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Availability__c</fullName>
        <label>Contract Availability</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Count_of_Non_Fill_Up__c</fullName>
        <label>Contract Count of Non-Fill Up</label>
        <summaryFilterItems>
            <field>Apttus_QPConfig__ProposalProductAttributeValue__c.SCS_Print_Purchase_Options__c</field>
            <operation>equals</operation>
            <value>Ship &amp; Enter Sub, Sub Only</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_QPConfig__ProposalProductAttributeValue__c.Apttus_QPConfig__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Exit_Amount__c</fullName>
        <description>Created as part of DOC-12617, tells amount which customer pays on last year of term and can be used for Renewing Line item for next term.</description>
        <label>Contract Exit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Has_Bridge__c</fullName>
        <formula>(ISPICKVAL(APTS_Contract_Term__c, &quot;Short Term Trial&quot;) &amp;&amp; APTS_Bridge_Length__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Has Bridge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Line_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Contract Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Line_Status_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(APTS_Contract_Line_Status__c) ) , CASE(APTS_Contract_Line_Status__c, &apos;Exist&apos;, &apos;Existant&apos;, &apos;New&apos;, &apos;Nouveau&apos;,&apos;Renewed&apos;,&apos;Renouvelé&apos;,&apos;Lapsed&apos;,&apos;Expiré&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>Contract Line Status French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Line_Status__c</fullName>
        <formula>CASE (TEXT(Apttus_QPConfig__LineStatus__c), 
&quot;Amended&quot;, &quot;Exist&quot;, 
&quot;New&quot;, &quot;New&quot;,
&quot;Renewed&quot;, &quot;Renewed&quot;,
&quot;Cancelled&quot;, &quot;Lapsed&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Line Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Contract Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Order_Type_French_Display__c</fullName>
        <formula>IF( NOT( ISBLANK( APTS_Contract_Order_Type__c ) ) ,  CASE(APTS_Contract_Order_Type__c, &apos;Subscription&apos;,&apos;Abonnement&apos;, &apos;Subscription Plus Bridge (see below)&apos;,&apos;Abonnement et pont&apos;,&apos;Short Term Trial&apos;,&apos;Essai à Court Terme&apos;,&apos;&apos;) , &apos;&apos;)</formula>
        <label>Contract Order Type French Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Order_Type__c</fullName>
        <description>Contract Order Type is used for proposal line items on the contract order form to describe if the proposal line item is for Windows, Bridges, Short Term Trials or Subscriptions</description>
        <formula>IF((ISPICKVAL(APTS_Contract_Term__c, &quot;Short Term Trial&quot;)), &quot;Short Term Trial&quot;,
IF((APTS_Bridge_Length__c) &gt; 0, &quot;Subscription Plus Bridge (see below)&quot;,
IF(CONTAINS(APTS_Product_Name__c, &quot;Window&quot;), &quot;Windows&quot;,
&quot;Subscription&quot;)))</formula>
        <label>Contract Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Sub_Type_French_Display__c</fullName>
        <label>Contract Sub Type French Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Subscription_Type__c</fullName>
        <description>This field is used for Print/Proview Products and Programs on the Contract Order Form and is determined based on the print purchase option value chosen for the proposal line item in the shopping cart (product configuration)</description>
        <formula>Contract_Subscription_Type_Text__c</formula>
        <label>Contract Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Subscription__c</fullName>
        <label>Contract Subscription</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term_Number__c</fullName>
        <label>Contract Term Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Corporate_Select__c</fullName>
        <label>Corporate Select</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Count_APP__c</fullName>
        <label>Count APP</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Fill_Up_Ent_Sub_APP__c</fullName>
        <description>Count of Fill Up &amp; Ent Sub APP</description>
        <label>Count of Fill Up &amp; Ent Sub APP</label>
        <summaryFilterItems>
            <field>Apttus_QPConfig__ProposalProductAttributeValue__c.SCS_Print_Purchase_Options__c</field>
            <operation>equals</operation>
            <value>Fill-Up &amp; Enter Sub APP</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_QPConfig__ProposalProductAttributeValue__c.Apttus_QPConfig__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Fill_Up_Ent_Sub__c</fullName>
        <description>Count of Fill Up &amp; Ent Sub</description>
        <label>Count of Fill Up &amp; Ent Sub</label>
        <summaryFilterItems>
            <field>Apttus_QPConfig__ProposalProductAttributeValue__c.SCS_Print_Purchase_Options__c</field>
            <operation>equals</operation>
            <value>Fill-Up &amp; Enter Sub</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_QPConfig__ProposalProductAttributeValue__c.Apttus_QPConfig__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_Fill_Up__c</fullName>
        <description>Count of Fill Up</description>
        <label>Count of Fill Up</label>
        <summaryFilterItems>
            <field>Apttus_QPConfig__ProposalProductAttributeValue__c.SCS_Print_Purchase_Options__c</field>
            <operation>equals</operation>
            <value>Fill-Up</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_QPConfig__ProposalProductAttributeValue__c.Apttus_QPConfig__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Deal Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Number_w_o_comma__c</fullName>
        <description>Added for Template Use</description>
        <formula>TEXT(APTS_Deal_Number__c)</formula>
        <label>Deal Number w/o comma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Type__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Deal Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Decentralized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_Decentralized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Display_Number_of_Attorneys__c</fullName>
        <formula>IF(APTS_FL_Material_Number__c = &apos;41053157&apos;, &apos;Atty Count - &apos; +TEXT(APTS_FL_Qty__c),
IF(OR(ISBLANK(Apttus_QPConfig__AttributeValueId__c), APTS_Cat_L5__c = &apos;L5_L0222_FP&apos;,APTS_Cat_L5__c = &apos;L5_L0220_FP&apos;,APTS_Cat_L5__c = &apos;L5_L0221_FP&apos;),&apos;&apos;, &apos;Atty Count - &apos; +TEXT(Apttus_QPConfig__AttributeValueId__r.APTS_Priced_Number_of_Attorneys__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Number of Attorneys</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ebilling_contact__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Ebilling_contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ebill Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date_Display__c</fullName>
        <formula>IF( NOT( ISBLANK(APTS_End_Date__c) ) ,
IF( LEN( TEXT(DAY(APTS_End_Date__c)) )&gt;1 , TEXT(DAY(APTS_End_Date__c)) , &quot;0&quot; + TEXT(DAY(APTS_End_Date__c)) ) + &quot;-&quot; + 
CASE(TEXT(MONTH(APTS_End_Date__c)),
&apos;1&apos;,&apos;Jan&apos;,
&apos;2&apos;,&apos;Feb&apos;,
&apos;3&apos;,&apos;Mar&apos;,
&apos;4&apos;,&apos;Apr&apos;,
&apos;5&apos;,&apos;May&apos;,
&apos;6&apos;,&apos;Jun&apos;,
&apos;7&apos;,&apos;Jul&apos;,
&apos;8&apos;,&apos;Aug&apos;,
&apos;9&apos;,&apos;Sep&apos;,
&apos;10&apos;,&apos;Oct&apos;,
&apos;11&apos;,&apos;Nov&apos;,
&apos;12&apos;,&apos;Dec&apos;,
&apos;&apos;) +&quot;-&quot; +  
TEXT( YEAR(APTS_End_Date__c) ), &apos;&apos;)</formula>
        <label>End Date Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Agreement_Total__c</fullName>
        <label>Existing Agreement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Subscriptions_Total__c</fullName>
        <label>Existing Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Adjustment_Discount__c</fullName>
        <description>For templates to display 2 decimals</description>
        <formula>Apttus_QPConfig__AdjustmentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Bridge_Days__c</fullName>
        <formula>CASE( APTS_Bridge__c , &apos;1 Month&apos;, &apos;30&apos;, &apos;2 Months&apos;, &apos;60&apos;, &apos;3 Months&apos;, &apos;90&apos;,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bridge Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Current_Contract_End_Date__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.APTS_FL_Current_Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Current_Renewal_User_Rate__c</fullName>
        <description>Current user rate from SAP Billingplan</description>
        <formula>IF( OR(APTS_Cat_L5__c = &apos;L5_L0222_FP&apos;,APTS_Cat_L5__c = &apos;L5_L0220_FP&apos;,APTS_Cat_L5__c = &apos;L5_L0221_FP&apos;), 1.00, Apttus_QPConfig__AssetLineItemId__r.Apttus_Config2__NetPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Price of Asset line item</inlineHelpText>
        <label>Current Renewal User Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Material_Number__c</fullName>
        <description>For templates since it cannot go to multiple hops to get material number.</description>
        <formula>Apttus_Proposal__Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Number Override</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Price_Increase_Percentage__c</fullName>
        <formula>IF( OR(APTS_Proposal_Business_Unit__c&lt;&gt;&apos;FindLaw&apos;,APTS_Cat_L5__c = &apos;L5_L0222_FP&apos;,APTS_Cat_L5__c = &apos;L5_L0220_FP&apos;,APTS_Cat_L5__c = &apos;L5_L0221_FP&apos;), 0.00, (Apttus_QPConfig__NetPrice__c - Apttus_QPConfig__AssetLineItemId__r.Apttus_Config2__NetPrice__c ) / Apttus_QPConfig__AssetLineItemId__r.Apttus_Config2__NetPrice__c)*100</formula>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Qty__c</fullName>
        <label>FL Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Renewal_Contract_End_Date__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.APTS_FL_Renewal_Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Renewal_Only_Clone__c</fullName>
        <label>Renewal Only/Old Versions</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Finalized_Date__c</fullName>
        <formula>Apttus_QPConfig__ConfigurationId__r.Apttus_Config2__FinalizedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_FindLaw_Max_Down_Payment__c</fullName>
        <formula>CASE( APTS_Cat_L5__c,
&quot;L5_L1463_FP&quot;, 1,
&quot;L5_L0209_FP&quot;, IF(CONTAINS( Apttus_QPConfig__ClassificationHierarchy__c, &quot;| SL VIDEO&quot;) ,0.33,0),
0)</formula>
        <label>FindLaw Max Down Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Finished_Item_Number__c</fullName>
        <label>Finished Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fiscal_Filer__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Fiscal_Filer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Filer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Fiscal_Year_End__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_Fiscal_Year_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Format__c</fullName>
        <label>Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GLI_Bill_To_Contact__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_GLI_Bill_To_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GLI_Ship_To_Contact__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_GLI_Ship_To_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GLI_Sold_To_Contact__c</fullName>
        <formula>Apttus_Proposal__Proposal__r.APTS_GLI_Sold_To_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Primary_Material__c</fullName>
        <label>Group Primary Material</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Type__c</fullName>
        <label>Group Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>